Add workflow properties to streaming job message.